# test

esp32c6mini-canbus-main/: .gitignore  CMakeLists.txt  build.sh  build_ota.sh  partitions.csv  partitions_ota.csv  sdkconfig.defaults
esp32c6mini-canbus-main/main/: CMakeLists.txt  idf_component.yml  main.c  motor_control.c  motor_control.h  ota_system.c  ota_system.h  safety_system.c  safety_system.h  web_admin.c  web_server.c  web_server.h
esp32c6mini-canbus-main/python_CANbus_botarm/: DM_CAN.py  PositionReaderGUI.py  position_reader_config.json
esp32c6mini-canbus-main/spiffs/: index.html
